WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238045
Microsoft Teams fails to launch from Safari
https://bugs.webkit.org/show_bug.cgi?id=238045
Summary
Microsoft Teams fails to launch from Safari
Chris Dumez
Reported
2022-03-17 13:20:17 PDT
Microsoft Teams fails to launch from Safari
Attachments
Patch
(1.52 KB, patch)
2022-03-17 13:22 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-03-17 13:20:30 PDT
<
rdar://90434296
>
Chris Dumez
Comment 2
2022-03-17 13:22:28 PDT
Created
attachment 455015
[details]
Patch
Geoffrey Garen
Comment 3
2022-03-17 13:43:01 PDT
Comment on
attachment 455015
[details]
Patch r=me
EWS
Comment 4
2022-03-17 15:08:53 PDT
Committed
r291446
(
248569@main
): <
https://commits.webkit.org/248569@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455015
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug