Microsoft Teams fails to launch from Safari https://bugs.webkit.org/show_bug.cgi?id=238045 <rdar://90434296>

Reviewed by Geoffrey Garen.

Extend MS Teams quirk to teams.microsoft.com, not just teams.live.com.

* page/Quirks.cpp:
(WebCore::Quirks::shouldAllowNavigationToCustomProtocolWithoutUserGesture):



Canonical link: https://commits.webkit.org/248569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291446 268f45cc-cd09-0410-ab3c-d52691b4dbfc