Source/WebCore/page/Quirks.cpp
@@ -1422,7 +1422,7 @@ bool Quirks::shouldDisableEndFullscreenEventWhenEnteringPictureInPictureFromFull
 
 bool Quirks::shouldAllowNavigationToCustomProtocolWithoutUserGesture(StringView protocol, const SecurityOriginData& requesterOrigin)
 {
-    return protocol == "msteams" && requesterOrigin.host == "teams.live.com";
+    return protocol == "msteams" && (requesterOrigin.host == "teams.live.com" || requesterOrigin.host == "teams.microsoft.com");
 }
 
 #if ENABLE(IMAGE_ANALYSIS)
